# SpritesheetUnpacker

./: .gitignore  CMakeLists.txt  SDLExceptionThrower.h  SDLProgram.cpp  SDLProgram.h  Texture2D.cpp  Texture2D.h  main.cpp
lib/: CImg.h
